--- a/modules/quickproducttable/views/css/front.css
+++ b/modules/quickproducttable/views/css/front.css
@@ -325,6 +325,10 @@ text-align: center;
     position: absolute;
 }
 
+#chkal3{
+    position: relative;
+}
+
 .border {
     border: double;
     border-width: thin;
